<resources>
    <string name="app_name">ChatterBox</string>
    <string name="create_group">Create Group</string>
    <string name="join_group">Join Group</string>
    <string name="Main_Title">Welcome to the Jungle</string>

    <string name="disconnect">Disconnect</string>
    <string name="signed_in">Signed In</string>
    <string name="sign_out">Sign Out</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sample_message">Hello!</string>

    <string name="facebook_app_id">134292837217421</string>
    <string name="fb_login_protocol_scheme">fb134292837217421</string>
    <string name="title_activity_main_login">Sign in</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="log_in">LOG IN</string>
    <string name="already_a_user">Already a user?</string>
    <string name="or_with">or with</string>
    <string name="profile">Profile</string>


</resources>
